--- a/HybridCloudApp/Documentation/site/LAB_access/index.html
+++ b/HybridCloudApp/Documentation/site/LAB_access/index.html
@@ -245,111 +245,111 @@ User name: HYBRIDLAB\DMZ_USER_&lt;ID&gt;
 </tr>
 <tr>
 <td>DMZ_User_03</td>
-<td>POD 01-C</td>
-<td><a href="https://vc-pod01.hybridlab.local">https://vc-pod01.hybridlab.local</a></td>
-<td><a href="https://172.18.1.173">https://172.18.1.173</a></td>
-</tr>
-<tr>
-<td>DMZ_User_04</td>
 <td>POD 02-A</td>
 <td><a href="https://vc-pod02.hybridlab.local">https://vc-pod02.hybridlab.local</a></td>
 <td><a href="https://172.18.1.177">https://172.18.1.177</a></td>
 </tr>
 <tr>
-<td>DMZ_User_05</td>
+<td>DMZ_User_04</td>
 <td>POD 02-B</td>
 <td><a href="https://vc-pod02.hybridlab.local">https://vc-pod02.hybridlab.local</a></td>
 <td><a href="https://172.18.1.181">https://172.18.1.181</a></td>
 </tr>
 <tr>
-<td>DMZ_User_06</td>
-<td>POD 02-C</td>
-<td><a href="https://vc-pod02.hybridlab.local">https://vc-pod02.hybridlab.local</a></td>
-<td><a href="https://172.18.1.185">https://172.18.1.185</a></td>
-</tr>
-<tr>
-<td>DMZ_User_07</td>
+<td>DMZ_User_05</td>
 <td>POD 03-A</td>
 <td><a href="https://vc-pod03.hybridlab.local">https://vc-pod03.hybridlab.local</a></td>
 <td><a href="https://172.18.1.189">https://172.18.1.189</a></td>
 </tr>
 <tr>
-<td>DMZ_User_08</td>
+<td>DMZ_User_06</td>
 <td>POD 03-B</td>
 <td><a href="https://vc-pod03.hybridlab.local">https://vc-pod03.hybridlab.local</a></td>
 <td><a href="https://172.18.1.193">https://172.18.1.193</a></td>
 </tr>
 <tr>
-<td>DMZ_User_09</td>
+<td>DMZ_User_07</td>
 <td>POD 04-A</td>
 <td><a href="https://vc-pod04.hybridlab.local">https://vc-pod04.hybridlab.local</a></td>
 <td><a href="https://172.18.1.197">https://172.18.1.197</a></td>
 </tr>
 <tr>
-<td>DMZ_User_10</td>
+<td>DMZ_User_08</td>
 <td>POD 04-B</td>
 <td><a href="https://vc-pod04.hybridlab.local">https://vc-pod04.hybridlab.local</a></td>
 <td><a href="https://172.18.1.201">https://172.18.1.201</a></td>
 </tr>
 <tr>
-<td>DMZ_User_11</td>
+<td>DMZ_User_09</td>
 <td>POD 04-C</td>
 <td><a href="https://vc-pod04.hybridlab.local">https://vc-pod04.hybridlab.local</a></td>
 <td><a href="https://172.18.1.205">https://172.18.1.205</a></td>
 </tr>
 <tr>
-<td>DMZ_User_12</td>
+<td>DMZ_User_10</td>
 <td>POD 04-D</td>
 <td><a href="https://vc-pod04.hybridlab.local">https://vc-pod04.hybridlab.local</a></td>
 <td><a href="https://172.18.1.209">https://172.18.1.209</a></td>
 </tr>
 <tr>
-<td>DMZ_User_13</td>
+<td>DMZ_User_11</td>
 <td>POD 06-A</td>
 <td><a href="https://vc-pod06.hybridlab.local">https://vc-pod06.hybridlab.local</a></td>
 <td><a href="https://172.18.1.213">https://172.18.1.213</a></td>
 </tr>
 <tr>
-<td>DMZ_User_14</td>
+<td>DMZ_User_12</td>
 <td>POD 06-B</td>
 <td><a href="https://vc-pod06.hybridlab.local">https://vc-pod06.hybridlab.local</a></td>
 <td><a href="https://172.18.1.217">https://172.18.1.217</a></td>
 </tr>
 <tr>
-<td>DMZ_User_15</td>
+<td>DMZ_User_13</td>
 <td>POD 06-C</td>
 <td><a href="https://vc-pod06.hybridlab.local">https://vc-pod06.hybridlab.local</a></td>
 <td><a href="https://172.18.1.221">https://172.18.1.221</a></td>
 </tr>
 <tr>
-<td>DMZ_User_16</td>
+<td>DMZ_User_14</td>
 <td>POD 06-D</td>
 <td><a href="https://vc-pod06.hybridlab.local">https://vc-pod06.hybridlab.local</a></td>
 <td><a href="https://172.18.1.225">https://172.18.1.225</a></td>
 </tr>
 <tr>
-<td>DMZ_User_17</td>
+<td>DMZ_User_15</td>
+<td>POD 06-E</td>
+<td><a href="https://vc-pod06.hybridlab.local">https://vc-pod06.hybridlab.local</a></td>
+<td><a href="https://172.18.1.173">https://172.18.1.173</a></td>
+</tr>
+<tr>
+<td>DMZ_User_16</td>
 <td>POD 07-A</td>
 <td><a href="https://vc-pod07.hybridlab.local">https://vc-pod07.hybridlab.local</a></td>
 <td><a href="https://172.18.1.229">https://172.18.1.229</a></td>
 </tr>
 <tr>
-<td>DMZ_User_18</td>
+<td>DMZ_User_17</td>
 <td>POD 07-B</td>
 <td><a href="https://vc-pod07.hybridlab.local">https://vc-pod07.hybridlab.local</a></td>
 <td><a href="https://172.18.1.233">https://172.18.1.233</a></td>
 </tr>
 <tr>
-<td>DMZ_User_19</td>
+<td>DMZ_User_18</td>
 <td>POD 07-C</td>
 <td><a href="https://vc-pod07.hybridlab.local">https://vc-pod07.hybridlab.local</a></td>
 <td><a href="https://172.18.1.237">https://172.18.1.237</a></td>
 </tr>
 <tr>
-<td>DMZ_User_20</td>
+<td>DMZ_User_19</td>
 <td>POD 07-D</td>
 <td><a href="https://vc-pod07.hybridlab.local">https://vc-pod07.hybridlab.local</a></td>
 <td><a href="https://172.18.1.241">https://172.18.1.241</a></td>
+</tr>
+<tr>
+<td>DMZ_User_20</td>
+<td>POD 07-E</td>
+<td><a href="https://vc-pod07.hybridlab.local">https://vc-pod07.hybridlab.local</a></td>
+<td><a href="https://172.18.1.185">https://172.18.1.185</a></td>
 </tr>
 </tbody>
 </table>
